--- a/KanskeKulSpel/imgui.ini
+++ b/KanskeKulSpel/imgui.ini
@@ -9,7 +9,7 @@ Size=321,184
 Collapsed=0
 
 [Window][turbotest]
-Pos=1007,455
+Pos=1333,567
 Size=300,300
 Collapsed=0
 
@@ -249,7 +249,22 @@ Size=500,500
 Collapsed=0
 
 [Window][Profolio, MicSec!]
-Pos=1395,76
+Pos=1357,89
 Size=502,526
 Collapsed=1
+
+[Window][Example: Console]
+Pos=59,62
+Size=520,600
+Collapsed=0
+
+[Window][TurboConsole]
+Pos=719,196
+Size=500,600
+Collapsed=0
+
+[Window][rfef]
+Pos=36,42
+Size=517,428
+Collapsed=0
 
