Perfect console window. Can't even remember for what reason I made it

--- a/KanskeKulSpel/imgui.ini
+++ b/KanskeKulSpel/imgui.ini
@@ -259,12 +259,17 @@ Size=520,600
 Collapsed=0
 
 [Window][TurboConsole]
-Pos=719,196
+Pos=21,29
 Size=500,600
 Collapsed=0
 
 [Window][rfef]
-Pos=36,42
+Pos=79,209
 Size=517,428
+Collapsed=0
+
+[Window][test]
+Pos=930,627
+Size=61,57
 Collapsed=0
 
