--- a/KanskeKulSpel/imgui.ini
+++ b/KanskeKulSpel/imgui.ini
@@ -249,9 +249,9 @@ Size=500,500
 Collapsed=0
 
 [Window][Profolio, MicSec!]
-Pos=1357,89
-Size=502,526
-Collapsed=1
+Pos=1296,43
+Size=502,533
+Collapsed=0
 
 [Window][Example: Console]
 Pos=59,62
@@ -259,7 +259,7 @@ Size=520,600
 Collapsed=0
 
 [Window][TurboConsole]
-Pos=21,29
+Pos=22,29
 Size=500,600
 Collapsed=0
 
@@ -271,5 +271,10 @@ Collapsed=0
 [Window][test]
 Pos=930,627
 Size=61,57
+Collapsed=0
+
+[Window][Turbosole]
+Pos=60,60
+Size=500,600
 Collapsed=0
 
