Weapon swapping under way

--- a/KanskeKulSpel/KanskeKulSpel.vcxproj
+++ b/KanskeKulSpel/KanskeKulSpel.vcxproj
@@ -155,6 +155,7 @@
     <ClCompile Include="src\Handlers\ParticleHandler.cpp" />
     <ClCompile Include="src\Handlers\ProjectileHandler.cpp" />
     <ClCompile Include="src\Handlers\ShadowHandler.cpp" />
+    <ClCompile Include="src\Handlers\UIHandler.cpp" />
     <ClCompile Include="src\Misc\KeyboardState.cpp" />
     <ClCompile Include="src\Main.cpp" />
     <ClCompile Include="src\Entities\Player.cpp" />
@@ -166,6 +167,7 @@
     <ClInclude Include="src\Collision\CollisionHandler.h" />
     <ClInclude Include="src\Entities\Enemies\Enemy.h" />
     <ClInclude Include="src\Entities\Enemies\Grunt.h" />
+    <ClInclude Include="src\Entities\Item.h" />
     <ClInclude Include="src\Entities\MovingEntity.h" />
     <ClInclude Include="src\Entities\Throwables\Throwable.h" />
     <ClInclude Include="src\Handlers\CharacterHandler.h" />
@@ -201,6 +203,7 @@
     <None Include="..\Shaders\Lighting.frag" />
     <None Include="..\Shaders\LightingNoShadow.frag" />
     <None Include="src\Entities\Enemies\Grunt.nm" />
+    <None Include="src\Entities\Throwables\Throwables.trw" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="src\Lighting\big think.txt" />
