--- a/KanskeKulSpel/imgui.ini
+++ b/KanskeKulSpel/imgui.ini
@@ -274,7 +274,12 @@ Size=61,57
 Collapsed=0
 
 [Window][Turbosole]
-Pos=16,33
+Pos=233,147
 Size=500,600
+Collapsed=0
+
+[Window][Player tweaker]
+Pos=1413,327
+Size=294,230
 Collapsed=0
 
