--- a/KanskeKulSpel/KanskeKulSpel.vcxproj.filters
+++ b/KanskeKulSpel/KanskeKulSpel.vcxproj.filters
@@ -200,6 +200,9 @@
     <ClInclude Include="src\Collision\Explosion.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\Handlers\HubHandler.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\Shaders\GaussianVert.frag" />
@@ -209,6 +212,7 @@
     <None Include="src\Data\LoadList.mop" />
     <None Include="src\Data\Throwables.mop" />
     <None Include="src\Data\Grunt.mop" />
+    <None Include="src\Data\Player.mop" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="src\Lighting\big think.txt" />
