--- a/KanskeKulSpel/KanskeKulSpel.vcxproj.filters
+++ b/KanskeKulSpel/KanskeKulSpel.vcxproj.filters
@@ -228,6 +228,10 @@
     <None Include="src\Data\Throwables.mop" />
     <None Include="src\Data\Grunt.mop" />
     <None Include="src\Data\Player.mop" />
+    <None Include="..\Resources\Data\LoadList.mop" />
+    <None Include="..\Resources\Data\Player.mop" />
+    <None Include="..\Resources\Data\Throwables.mop" />
+    <None Include="..\Resources\Data\Grunt.mop" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="src\Misc\Todo.txt" />
