Inventory lookin good

--- a/KanskeKulSpel/KanskeKulSpel.vcxproj
+++ b/KanskeKulSpel/KanskeKulSpel.vcxproj
@@ -209,6 +209,7 @@
     <None Include="..\Resources\Data\Grunt.mop" />
     <None Include="..\Resources\Data\LoadList.mop" />
     <None Include="..\Resources\Data\Player.mop" />
+    <None Include="..\Resources\Data\StartItems.mop" />
     <None Include="..\Resources\Data\Throwables.mop" />
     <None Include="..\Shaders\GaussianHor.frag" />
     <None Include="..\Shaders\GaussianVert.frag" />
