Health bar implemented

--- a/KanskeKulSpel/KanskeKulSpel.vcxproj
+++ b/KanskeKulSpel/KanskeKulSpel.vcxproj
@@ -151,13 +151,14 @@
     <ClCompile Include="src\Entities\Throwables\Throwable.cpp" />
     <ClCompile Include="src\Game.cpp" />
     <ClCompile Include="src\Handlers\CharacterHandler.cpp" />
-    <ClCompile Include="src\Handlers\HubHandler.cpp" />
+    <ClCompile Include="src\Interface\HubHandler.cpp" />
     <ClCompile Include="src\Handlers\LevelHandler.cpp" />
     <ClCompile Include="src\Handlers\ParticleHandler.cpp" />
     <ClCompile Include="src\Handlers\ItemHandler.cpp" />
     <ClCompile Include="src\Handlers\ShadowHandler.cpp" />
     <ClCompile Include="src\Handlers\TextureHandler.cpp" />
-    <ClCompile Include="src\Handlers\UIHandler.cpp" />
+    <ClCompile Include="src\Interface\InventoryHandler.cpp" />
+    <ClCompile Include="src\Interface\UIHandler.cpp" />
     <ClCompile Include="src\Interface\TextBubble.cpp" />
     <ClCompile Include="src\Misc\KeyboardState.cpp" />
     <ClCompile Include="src\Main.cpp" />
@@ -176,11 +177,12 @@
     <ClInclude Include="src\Entities\MovingEntity.h" />
     <ClInclude Include="src\Entities\Throwables\Throwable.h" />
     <ClInclude Include="src\Handlers\CharacterHandler.h" />
-    <ClInclude Include="src\Handlers\HubHandler.h" />
+    <ClInclude Include="src\Interface\HubHandler.h" />
     <ClInclude Include="src\Handlers\ParticleHandler.h" />
     <ClInclude Include="src\Handlers\ItemHandler.h" />
     <ClInclude Include="src\Handlers\TextureHandler.h" />
-    <ClInclude Include="src\Handlers\UIHandler.h" />
+    <ClInclude Include="src\Interface\InventoryHandler.h" />
+    <ClInclude Include="src\Interface\UIHandler.h" />
     <ClInclude Include="src\Interface\TextBubble.h" />
     <ClInclude Include="src\Misc\ConsoleWindow.h" />
     <ClInclude Include="src\Misc\Counter.h" />
