--- a/KanskeKulSpel/KanskeKulSpel.vcxproj.filters
+++ b/KanskeKulSpel/KanskeKulSpel.vcxproj.filters
@@ -248,6 +248,7 @@
     <None Include="..\Resources\Shaders\Lighting.frag" />
     <None Include="..\Resources\Shaders\LightingNoShadow.frag" />
     <None Include="..\Resources\Shaders\GaussianHor.frag" />
+    <None Include="..\Resources\Data\Gatherables.mop" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="src\Misc\Todo.txt" />
