Separated Levels enum from LevelHandler to use at other places

--- a/KanskeKulSpel/KanskeKulSpel.vcxproj
+++ b/KanskeKulSpel/KanskeKulSpel.vcxproj
@@ -147,13 +147,13 @@
     <ClCompile Include="src\Entities\Enemies\Grunt.cpp" />
     <ClCompile Include="src\Entities\Entity.cpp" />
     <ClCompile Include="src\Entities\MovingEntity.cpp" />
-    <ClCompile Include="src\Entities\Terrain.cpp" />
+    <ClCompile Include="src\Level\Terrain.cpp" />
     <ClCompile Include="src\Entities\Throwables\Throwable.cpp" />
     <ClCompile Include="src\Game.cpp" />
     <ClCompile Include="src\GameState.cpp" />
     <ClCompile Include="src\Handlers\CharacterHandler.cpp" />
     <ClCompile Include="src\Interface\HubHandler.cpp" />
-    <ClCompile Include="src\Handlers\LevelHandler.cpp" />
+    <ClCompile Include="src\Level\LevelHandler.cpp" />
     <ClCompile Include="src\Handlers\ParticleHandler.cpp" />
     <ClCompile Include="src\Handlers\ItemHandler.cpp" />
     <ClCompile Include="src\Handlers\ShadowHandler.cpp" />
@@ -193,15 +193,16 @@
     <ClInclude Include="src\Entities\AnimatedEntity.h" />
     <ClInclude Include="src\Collision\CollisionBox.h" />
     <ClInclude Include="src\Entities\Entity.h" />
-    <ClInclude Include="src\Entities\Terrain.h" />
+    <ClInclude Include="src\Level\Terrain.h" />
     <ClInclude Include="src\Game.h" />
-    <ClInclude Include="src\Handlers\LevelHandler.h" />
+    <ClInclude Include="src\Level\LevelHandler.h" />
     <ClInclude Include="src\Handlers\ShadowHandler.h" />
     <ClInclude Include="src\Lighting\Light.h" />
     <ClInclude Include="src\Misc\KeyboardState.h" />
     <ClInclude Include="src\Lighting\LightQueue.h" />
     <ClInclude Include="src\Entities\Player.h" />
     <ClInclude Include="src\Handlers\ShaderHandler.h" />
+    <ClInclude Include="src\Level\Levels.h" />
     <ClInclude Include="src\Misc\Line.h" />
     <ClInclude Include="src\Misc\MouseState.h" />
     <ClInclude Include="src\Misc\Profiler.h" />
