--- a/KanskeKulSpel/KanskeKulSpel.vcxproj
+++ b/KanskeKulSpel/KanskeKulSpel.vcxproj
@@ -214,6 +214,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\Resources\Data\Grunt.mop" />
+    <None Include="..\Resources\Data\HubInterface.mop" />
     <None Include="..\Resources\Data\Items.mop" />
     <None Include="..\Resources\Data\LoadList.mop" />
     <None Include="..\Resources\Data\Player.mop" />
